--- a/backend/.env
+++ b/backend/.env
@@ -30,7 +30,7 @@ DATABASE_URL="pgsql://greenb:secret@db:5432/greenb?serverVersion=15.0"
 
 
 ###< doctrine/doctrine-bundle ###
-JWT_SECRET="your-very-secret-string"
+JWT_SECRET="yourpassphrasehere"
 
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
